--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href=style.css>
+        <link rel="stylesheet" type="text/css" href=css/style.css>
         <meta charset="UTF-8">
         <title>Tilannekuva</title>
     </head>
