--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
         <section>
             <article>
                 Tänne voi laittaa jotain läpinää
+                <br>
+                ja homma vaan jatkuu.
             </article>
-    </section>
+                <p>adf</p>
+            <article>
+                Jotain muuta
+            </article>
+        </section>
     </body>
 </html>
