--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
             <article>
                 Jotain muuta
             </article>
+            <script type="text/javascript">  
+                //This is done to make the following JavaScript code compatible to XHTML. <![CDATA[ 
+                function showhostname() 
+                { 
+                alert(document.location.hostname); 
+                } 
+                //]]>
+                showhostname()
         </section>
     </body>
 </html>
