--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
                 } 
                 //]]>
                 showhostname()
+            </script>
+                <br>
+                
+                    
+                <pre><script type="text/javascript">
+
+                    for (param in location) {document.writeln (param, ':\n\t', location[param])}
+
+                </script></pre>
         </section>
     </body>
 </html>
